# lending-backend/internal/app/router.go
@@ -33,6 +33,8 @@ func NewRouter(
     r.HandleFunc("/api/items/{object_id}", items.GetItemByID).Methods("GET")
     r.HandleFunc("/api/items/{object_id}", items.UpdateItem).Methods("PUT")
     r.HandleFunc("/api/items/{object_id}/image", items.UploadItemImage).Methods("POST")
+    r.HandleFunc("/api/items/media", items.UploadItemMedia).Methods("POST")
+    // r.HandleFunc("/api/items/{object_id}/video")
 
     // Swagger
     r.PathPrefix("/swagger/").Handler(httpSwagger.WrapHandler)
